# steshaw.org

./: .envrc  .gitignore  .gitmodules  .travis.yml  LICENCE  LICENCE-MIT  Makefile  Multilang.lhs  README.md  README.org  about.rst  cabal.sandbox.config  circle.yml  floop  index.html  package.yaml  shell.nix  site.hs  stack.nix  stack.yaml  steshaw-org.cabal  todo-index-all.hs
.circleci/: config.yml
.config/: environment
.halcyon/: constaints  constraints  extra-source-hash-ignore
about/: index.md  kcs.html  kcs2.html
css/: default.css  syntax-figure.css  syntax.css
drafts/: demystifying-kubernetes-readiness-and-liveness.md  how-parse-should-build-apis.org  software-foundations-on-spacemacs.md
economics-in-one-lesson/: chap01p1.html  chap01p3.html  chap04p1.html  chap04p2.html  chap04p3.html  chap05p1.html  chap06p2.html  chap07p3.html  chap08p1.html  chap09p1.html  chap11p2.html  chap11p5.html  chap13p2.html  chap13p3.html  chap14p1.html  chap14p4.html  chap15p1.html  chap15p2.html  chap16p2.html  chap17p2.html  chap17p4.html  chap18p1.html  chap19p1.html  chap19p3.html  chap20p1.html  chap20p2.html  chap21p3.html  chap21p4.html  chap23p2.html  chap23p3.html  chap23p5.html  chap24p4.html  chap25p2.html  chap25p4.html  chap28p1.html  preface.html  vssver.scc
ideas/: index.org
js/: blog.js  header.js  octopressify.js
notes/: bio-next-role.org  bio.org  category-theory.md  chess.org  content-management-systems.md  current.org  distributed-systems.org  erlang.md  focus.org  goals.org  idris-dev.org  idris.org  kernel.md  kubernetes.md  lambda-jam-2014.org  machine-learning.org  modules-reader-cake.org  monad-v-comonad.org  nix.org  package-system.org  parsing.md  ports.org  projects.org  reader-with-annotations.org  recommended-companies.org  research-interests.org  (+5 more)
(+346 files in other folders)
