name:                   steshaw-org
version:                0.1.0.0
synopsis:               Hakyll site builder for steshaw.org
homepage:               http://steshaw.org
-- description:         
author:                 Steven Shaw
maintainer:             steven@steshaw.org
license:                BSD2
license-file:           LICENSE—BSD2
category:               Web
build-type:             Simple
extra-source-files:
cabal-version:          >= 1.10

executable site
  main-is:              site.hs
  ghc-options:          -O -Wall -threaded
  default-language:     Haskell2010
  build-depends:        base >=4.8 && <4.9
                      , hakyll >= 4.7.*
                      , hjsmin
                      , text
                      , bytestring
                      , containers
                      , time
                      , time-locale-compat
                      , filepath
                      , parsec
                      , aeson-pretty == 0.7.2
